--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "crimespaceangular",
   "version": "0.0.0",
   "dependencies": {
-    "express": "~4.0.0",
-    "morgan": "~1.0.0",
     "body-parser": "~1.0.0",
-    "method-override": "~1.0.0",
-    "static-favicon": "~1.0.1",
-    "cookie-parser": "~1.0.1",
-    "express-session": "~1.0.2",
-    "errorhandler": "~1.0.0",
     "compression": "~1.0.1",
+    "cookie-parser": "~1.0.1",
+    "ejs": "~0.8.4",
+    "errorhandler": "~1.0.0",
+    "express": "~4.0.0",
+    "express-session": "~1.0.2",
     "lodash": "~2.4.1",
+    "method-override": "~1.0.0",
     "mongoose": "~3.8.8",
-    "ejs": "~0.8.4"
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.1",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
