--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "method-override": "~1.0.0",
     "mongoose": "~3.8.8",
     "morgan": "~1.0.0",
+    "node-geocoder": "^2.5.0",
     "static-favicon": "~1.0.1",
     "underscore": "^1.6.0"
   },
