--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crimespaceangular",
   "version": "0.0.0",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "~1.0.0",
     "compression": "~1.0.1",
     "cookie-parser": "~1.0.1",
