--- a/bower.json
+++ b/bower.json
@@ -10,11 +10,15 @@
     "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
-    "angular-route": ">=1.2.*"
+    "angular-route": ">=1.2.*",
+    "angular-google-maps": "~1.0.10"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
   },
-  "testPath": "test/client/spec"  
+  "testPath": "test/client/spec",
+  "resolutions": {
+    "angular": ">=1.2.*"
+  }
 }
