--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "crimespace-angular",
   "version": "0.0.0",
   "dependencies": {
-    "angular": ">=1.2.*",
+    "angular": ">=1.5.*",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.11.0",
@@ -11,7 +11,7 @@
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
     "angular-route": ">=1.2.*",
-    "angular-google-maps": "~1.0.10"
+    "angular-google-maps": "~1.2.4"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
@@ -19,6 +19,6 @@
   },
   "testPath": "test/client/spec",
   "resolutions": {
-    "angular": ">=1.2.*"
+    "lodash": "~2.4.1"
   }
 }
